--- a/src/project/styles.css
+++ b/src/project/styles.css
@@ -1,17 +1,13 @@
 /*Input-text styles*/
 .input-text{
     margin: 5px 10px;
-    padding: 0px;
 }
 
 input{
     transition: 0.3s ease;
     background-color: #151928;
     color: #EFF0F5;
-    border: none;
     outline: none;
-    padding: 0px 5px;
-    padding-top: 5px;
     height: 30px;
     border-radius: 5px;
     overflow: hidden;
@@ -28,8 +24,6 @@ input:focus{
 .label-form{
     left: 10px;
     color: #777;
-    font-size: 14px;
-    padding: 0 4px;
     pointer-events: none;
 }
 
@@ -42,7 +36,6 @@ input:focus{
     justify-content: center;
     align-items: center;
     margin-top: 10px;
-    padding: 15px, 10px;
     border-radius: 5px;
     transition: 0.5s ease;
 }
@@ -55,5 +48,6 @@ input:focus{
 
 .submit-button:active{
     background-color: #1E2A56;
+    box-shadow: 0px 0px 10px #797979;
     transition: 0.5s ease;
 }
