--- a/src/project/styles.css
+++ b/src/project/styles.css
@@ -30,6 +30,7 @@ input:focus{
 /* submit-button styles*/
 .submit-button{
     background-color: #243F8A;
+    border:none;
     height: 35px;
     width: 25%;
     display: flex;
@@ -38,6 +39,7 @@ input:focus{
     margin-top: 10px;
     border-radius: 5px;
     transition: 0.5s ease;
+    color: #EFF0F5;
 }
 
 .submit-button:hover{
