RB-?? | Yael Otamendi | Creating a view to show users located in database from backend and modify on sSignUp.tsx form

--- a/src/project/layout-styles.css
+++ b/src/project/layout-styles.css
@@ -21,3 +21,10 @@
 .signup-form{
     display: grid;
 }
+
+/*AllUsers.tsx*/
+.elements{
+    margin: 0px 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
