--- a/src/project/styles.css
+++ b/src/project/styles.css
@@ -36,10 +36,11 @@ input:focus{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
+    margin: 10px 10px 5px 0;
     border-radius: 5px;
     transition: 0.5s ease;
     color: #EFF0F5;
+
 }
 
 .submit-button:hover{
@@ -75,4 +76,11 @@ input:focus{
 
 .type{
     place-items: center;
+}
+
+/*card-button*/
+.card-button{
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
