--- a/src/project/layout-styles.css
+++ b/src/project/layout-styles.css
@@ -24,7 +24,9 @@
 
 /*AllUsers.tsx*/
 .elements{
-    margin: 0px 10px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(5, minmax(250px, 1fr));
+    align-items: center;
+    margin: 0px 10px;
 }
+
